yaml_dockerfile/k8s-yaml/prometheus/alertmanager/alertmanager-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  selector:
    app: alertmanager
  ports:
    - port: 80
      targetPort: 9093
